@@ -14,6 +14,14 @@ Mon Oct 10 23:15:00 2011  Brent Roman  <brent@mbari.org>
         
         * fixed GCC 4.6 compile warnings in eval.c and gc.c
 
+Fri Feb 22 18:31:46 2013  Aaron Patterson <aaron@tenderlovemaking.com>
+
+        * lib/rexml/document.rb (REXML::Document.entity_expansion_text_limit):
+          new attribute to read/write entity expansion text limit.  the default
+          limit is 10Kb.
+
+        * lib/rexml/text.rb (REXML::Text.unnormalize): check above attribute.
+
 Fri Mar  2 11:44:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
         * marshal.c (mark_dump_arg): mark destination string.  patch by
